syntax = "proto3";
import "google/api/annotations.proto";
package pb;
message CreateBucketRequest{
    //request bucket name
    string name = 1;
    //access privileges
    string key = 2;
    //request storage LimitBytes
  int64 max_storage_bytes = 3;
  //limit object count
  int64 max_object_count = 4;
}

message CreateBucketResponse{
    string name = 1;
    //limit bytes for bucket
  int64 max_storage_bytes = 2;
  //limit object count
  int64 max_object_count = 3;
    string bucket_dir=4;
    string message = 5;

}

message DeleteBucketRequest{
    //bucket name
    string name = 1;
}

message DeleteBucketResponse{
    string name = 1;
    string bucket_dir=2;
    string key = 3;
    int64 current_storage_bytes = 4;
    //obejcts limits
    int64 current_object_count = 5;
    string message = 6;
}

message UpdateBucketRequest{
    string name = 1;
    string key = 2;
    int64 max_storage_bytes = 3;
  //limit object count
   int64 max_object_count = 4;
}

message UpdateBucketResponse {
      string name = 1;
      string bucket_dir=2;
  int64 max_storage_bytes = 3;
  //limit object count
  int64 max_object_count = 4;
      string message = 5;
}

message StatusBucketRequest{
  string name = 1;
  string key = 2;
}

message StatusBucketResponse {
  string name = 1;
  string bucket_dir=2;
  int64 max_storage_bytes = 3;
  //limit object count
  int64 max_object_count = 4;
  string message = 5;
}


